fix read notifications to return 200 for owner, 403 for others